--- a/src/test/resources/log4j2-test.yml
+++ b/src/test/resources/log4j2-test.yml
@@ -6,7 +6,7 @@ Configuration:
       name: STDOUT
       target: SYSTEM_OUT
       PatternLayout:
-        Pattern: "%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n"
+        Pattern: "%d{HH:mm:ss.SSS} [%t] %-5level %l - %msg%n"
     Socket:
       name: SOCKETOUT
       host: 10.169.3.219
@@ -16,6 +16,6 @@ Configuration:
         Pattern: "%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n"
   Loggers:
     Root:
-      level: debug
+      level: trace
       AppenderRef:
         ref: STDOUT
